# course_work_3

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
data/: employers.json  vacancies.json
data/test_data/: test_list.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_db_manager_py.html  z_145eef247bfb46b6_employer_py.html  z_145eef247bfb46b6_head_hunter_api_py.html  z_145eef247bfb46b6_save_to_json_file_py.html  z_145eef247bfb46b6_save_to_postgreSQL_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: base_api.py  base_save_to_file.py  db_manager.py  employer.py  head_hunter_api.py  save_to_json_file.py  save_to_postgreSQL.py  utils.py  vacancy.py
tests/: conftest.py  test_db_manager.py  test_employer.py  test_head_hunter_api.py  test_save_to_json_file.py  test_save_to_postgreSQL.py  test_utils.py  test_vacancy.py
